parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSEIF

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     bloc -> bloc SIMPLE_COMMENT
Rule 5     bloc -> SIMPLE_COMMENT
Rule 6     bloc -> bloc MULTI_COMMENT
Rule 7     bloc -> MULTI_COMMENT
Rule 8     statement -> PRINT LPAREN expression RPAREN
Rule 9     statement -> PRINT LPAREN STRING RPAREN
Rule 10    statement -> IF LPAREN expression RPAREN LBRACKET bloc RBRACKET
Rule 11    statement -> IF LPAREN expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
Rule 12    statement -> WHILE LPAREN expression RPAREN LBRACKET bloc RBRACKET
Rule 13    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
Rule 14    statement -> TOAMSCAN LPAREN NAME RPAREN
Rule 15    statement -> NAME ASSIGN SCAN LPAREN RPAREN
Rule 16    statement -> INT NAME ASSIGN expression
Rule 17    statement -> FLOAT NAME ASSIGN expression
Rule 18    statement -> DOUBLE NAME ASSIGN expression
Rule 19    statement -> STRING NAME ASSIGN expression
Rule 20    statement -> CHAR NAME ASSIGN expression
Rule 21    statement -> BOOL NAME ASSIGN expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression TIMES expression
Rule 26    expression -> LPAREN expression RPAREN
Rule 27    expression -> NUMBER
Rule 28    expression -> NAME
Rule 29    expression -> STRING
Rule 30    expression -> expression AND expression
Rule 31    expression -> expression OR expression
Rule 32    expression -> expression GREATER expression
Rule 33    expression -> expression LESS expression
Rule 34    expression -> expression EQUALS expression
Rule 35    expression -> expression NOTEQUALS expression
Rule 36    statement -> NAME INCREMENT
Rule 37    statement -> NAME DECREMENT
Rule 38    statement -> NAME INCREASE expression
Rule 39    statement -> NAME DECREASE expression

Terminals, with rules where they appear

AND                  : 30
ASSIGN               : 15 16 17 18 19 20 21
BOOL                 : 21
CHAR                 : 20
DECREASE             : 39
DECREMENT            : 37
DIVIDE               : 23
DOUBLE               : 18
ELSE                 : 11
ELSEIF               : 
EQUALS               : 34
FLOAT                : 17
FOR                  : 13
GREATER              : 32
IF                   : 10 11
INCREASE             : 38
INCREMENT            : 36
INT                  : 16
LBRACKET             : 10 11 11 12 13
LESS                 : 33
LPAREN               : 8 9 10 11 12 13 14 15 26
MINUS                : 22
MULTI_COMMENT        : 6 7
NAME                 : 14 15 16 17 18 19 20 21 28 36 37 38 39
NOTEQUALS            : 35
NUMBER               : 27
OR                   : 31
PLUS                 : 24
PRINT                : 8 9
RBRACKET             : 10 11 11 12 13
RPAREN               : 8 9 10 11 12 13 14 15 26
SCAN                 : 15
SEMICOLON            : 2 3 13 13
SIMPLE_COMMENT       : 4 5
STRING               : 9 19 29
TIMES                : 25
TOAMSCAN             : 14
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 4 6 10 11 11 12 13
expression           : 8 10 11 12 13 16 17 18 19 20 21 22 22 23 23 24 24 25 25 26 30 30 31 31 32 32 33 33 34 34 35 35 38 39
start                : 0
statement            : 2 3 13 13

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) bloc -> . bloc SIMPLE_COMMENT
    (5) bloc -> . SIMPLE_COMMENT
    (6) bloc -> . bloc MULTI_COMMENT
    (7) bloc -> . MULTI_COMMENT
    (8) statement -> . PRINT LPAREN expression RPAREN
    (9) statement -> . PRINT LPAREN STRING RPAREN
    (10) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (11) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (12) statement -> . WHILE LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
    (14) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (15) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (16) statement -> . INT NAME ASSIGN expression
    (17) statement -> . FLOAT NAME ASSIGN expression
    (18) statement -> . DOUBLE NAME ASSIGN expression
    (19) statement -> . STRING NAME ASSIGN expression
    (20) statement -> . CHAR NAME ASSIGN expression
    (21) statement -> . BOOL NAME ASSIGN expression
    (36) statement -> . NAME INCREMENT
    (37) statement -> . NAME DECREMENT
    (38) statement -> . NAME INCREASE expression
    (39) statement -> . NAME DECREASE expression

    SIMPLE_COMMENT  shift and go to state 4
    MULTI_COMMENT   shift and go to state 5
    PRINT           shift and go to state 6
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    TOAMSCAN        shift and go to state 11
    NAME            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    STRING          shift and go to state 7
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (4) bloc -> bloc . SIMPLE_COMMENT
    (6) bloc -> bloc . MULTI_COMMENT
    (8) statement -> . PRINT LPAREN expression RPAREN
    (9) statement -> . PRINT LPAREN STRING RPAREN
    (10) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (11) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (12) statement -> . WHILE LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
    (14) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (15) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (16) statement -> . INT NAME ASSIGN expression
    (17) statement -> . FLOAT NAME ASSIGN expression
    (18) statement -> . DOUBLE NAME ASSIGN expression
    (19) statement -> . STRING NAME ASSIGN expression
    (20) statement -> . CHAR NAME ASSIGN expression
    (21) statement -> . BOOL NAME ASSIGN expression
    (36) statement -> . NAME INCREMENT
    (37) statement -> . NAME DECREMENT
    (38) statement -> . NAME INCREASE expression
    (39) statement -> . NAME DECREASE expression

    $end            reduce using rule 1 (start -> bloc .)
    SIMPLE_COMMENT  shift and go to state 19
    MULTI_COMMENT   shift and go to state 20
    PRINT           shift and go to state 6
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    TOAMSCAN        shift and go to state 11
    NAME            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    STRING          shift and go to state 7
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    statement                      shift and go to state 18

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 21


state 4

    (5) bloc -> SIMPLE_COMMENT .

    SIMPLE_COMMENT  reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    MULTI_COMMENT   reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    PRINT           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    IF              reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    WHILE           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    FOR             reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    TOAMSCAN        reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    NAME            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    INT             reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    FLOAT           reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    DOUBLE          reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    STRING          reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    CHAR            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    BOOL            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    $end            reduce using rule 5 (bloc -> SIMPLE_COMMENT .)
    RBRACKET        reduce using rule 5 (bloc -> SIMPLE_COMMENT .)


state 5

    (7) bloc -> MULTI_COMMENT .

    SIMPLE_COMMENT  reduce using rule 7 (bloc -> MULTI_COMMENT .)
    MULTI_COMMENT   reduce using rule 7 (bloc -> MULTI_COMMENT .)
    PRINT           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    IF              reduce using rule 7 (bloc -> MULTI_COMMENT .)
    WHILE           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    FOR             reduce using rule 7 (bloc -> MULTI_COMMENT .)
    TOAMSCAN        reduce using rule 7 (bloc -> MULTI_COMMENT .)
    NAME            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    INT             reduce using rule 7 (bloc -> MULTI_COMMENT .)
    FLOAT           reduce using rule 7 (bloc -> MULTI_COMMENT .)
    DOUBLE          reduce using rule 7 (bloc -> MULTI_COMMENT .)
    STRING          reduce using rule 7 (bloc -> MULTI_COMMENT .)
    CHAR            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    BOOL            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    $end            reduce using rule 7 (bloc -> MULTI_COMMENT .)
    RBRACKET        reduce using rule 7 (bloc -> MULTI_COMMENT .)


state 6

    (8) statement -> PRINT . LPAREN expression RPAREN
    (9) statement -> PRINT . LPAREN STRING RPAREN

    LPAREN          shift and go to state 22


state 7

    (19) statement -> STRING . NAME ASSIGN expression

    NAME            shift and go to state 23


state 8

    (10) statement -> IF . LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (11) statement -> IF . LPAREN expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET

    LPAREN          shift and go to state 24


state 9

    (12) statement -> WHILE . LPAREN expression RPAREN LBRACKET bloc RBRACKET

    LPAREN          shift and go to state 25


state 10

    (13) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET

    LPAREN          shift and go to state 26


state 11

    (14) statement -> TOAMSCAN . LPAREN NAME RPAREN

    LPAREN          shift and go to state 27


state 12

    (15) statement -> NAME . ASSIGN SCAN LPAREN RPAREN
    (36) statement -> NAME . INCREMENT
    (37) statement -> NAME . DECREMENT
    (38) statement -> NAME . INCREASE expression
    (39) statement -> NAME . DECREASE expression

    ASSIGN          shift and go to state 28
    INCREMENT       shift and go to state 29
    DECREMENT       shift and go to state 30
    INCREASE        shift and go to state 31
    DECREASE        shift and go to state 32


state 13

    (16) statement -> INT . NAME ASSIGN expression

    NAME            shift and go to state 33


state 14

    (17) statement -> FLOAT . NAME ASSIGN expression

    NAME            shift and go to state 34


state 15

    (18) statement -> DOUBLE . NAME ASSIGN expression

    NAME            shift and go to state 35


state 16

    (20) statement -> CHAR . NAME ASSIGN expression

    NAME            shift and go to state 36


state 17

    (21) statement -> BOOL . NAME ASSIGN expression

    NAME            shift and go to state 37


state 18

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 38


state 19

    (4) bloc -> bloc SIMPLE_COMMENT .

    SIMPLE_COMMENT  reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    MULTI_COMMENT   reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    PRINT           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    IF              reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    WHILE           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    FOR             reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    TOAMSCAN        reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    NAME            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    INT             reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    FLOAT           reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    DOUBLE          reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    STRING          reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    CHAR            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    BOOL            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    $end            reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)
    RBRACKET        reduce using rule 4 (bloc -> bloc SIMPLE_COMMENT .)


state 20

    (6) bloc -> bloc MULTI_COMMENT .

    SIMPLE_COMMENT  reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    MULTI_COMMENT   reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    PRINT           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    IF              reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    WHILE           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    FOR             reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    TOAMSCAN        reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    NAME            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    INT             reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    FLOAT           reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    DOUBLE          reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    STRING          reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    CHAR            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    BOOL            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    $end            reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)
    RBRACKET        reduce using rule 6 (bloc -> bloc MULTI_COMMENT .)


state 21

    (3) bloc -> statement SEMICOLON .

    SIMPLE_COMMENT  reduce using rule 3 (bloc -> statement SEMICOLON .)
    MULTI_COMMENT   reduce using rule 3 (bloc -> statement SEMICOLON .)
    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    TOAMSCAN        reduce using rule 3 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    INT             reduce using rule 3 (bloc -> statement SEMICOLON .)
    FLOAT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    DOUBLE          reduce using rule 3 (bloc -> statement SEMICOLON .)
    STRING          reduce using rule 3 (bloc -> statement SEMICOLON .)
    CHAR            reduce using rule 3 (bloc -> statement SEMICOLON .)
    BOOL            reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RBRACKET        reduce using rule 3 (bloc -> statement SEMICOLON .)


state 22

    (8) statement -> PRINT LPAREN . expression RPAREN
    (9) statement -> PRINT LPAREN . STRING RPAREN
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    STRING          shift and go to state 41
    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43

    expression                     shift and go to state 40

state 23

    (19) statement -> STRING NAME . ASSIGN expression

    ASSIGN          shift and go to state 44


state 24

    (10) statement -> IF LPAREN . expression RPAREN LBRACKET bloc RBRACKET
    (11) statement -> IF LPAREN . expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 45

state 25

    (12) statement -> WHILE LPAREN . expression RPAREN LBRACKET bloc RBRACKET
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 47

state 26

    (13) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
    (8) statement -> . PRINT LPAREN expression RPAREN
    (9) statement -> . PRINT LPAREN STRING RPAREN
    (10) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (11) statement -> . IF LPAREN expression RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (12) statement -> . WHILE LPAREN expression RPAREN LBRACKET bloc RBRACKET
    (13) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
    (14) statement -> . TOAMSCAN LPAREN NAME RPAREN
    (15) statement -> . NAME ASSIGN SCAN LPAREN RPAREN
    (16) statement -> . INT NAME ASSIGN expression
    (17) statement -> . FLOAT NAME ASSIGN expression
    (18) statement -> . DOUBLE NAME ASSIGN expression
    (19) statement -> . STRING NAME ASSIGN expression
    (20) statement -> . CHAR NAME ASSIGN expression
    (21) statement -> . BOOL NAME ASSIGN expression
    (36) statement -> . NAME INCREMENT
    (37) statement -> . NAME DECREMENT
    (38) statement -> . NAME INCREASE expression
    (39) statement -> . NAME DECREASE expression

    PRINT           shift and go to state 6
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    TOAMSCAN        shift and go to state 11
    NAME            shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    DOUBLE          shift and go to state 15
    STRING          shift and go to state 7
    CHAR            shift and go to state 16
    BOOL            shift and go to state 17

    statement                      shift and go to state 48

state 27

    (14) statement -> TOAMSCAN LPAREN . NAME RPAREN

    NAME            shift and go to state 49


state 28

    (15) statement -> NAME ASSIGN . SCAN LPAREN RPAREN

    SCAN            shift and go to state 50


state 29

    (36) statement -> NAME INCREMENT .

    SEMICOLON       reduce using rule 36 (statement -> NAME INCREMENT .)
    RPAREN          reduce using rule 36 (statement -> NAME INCREMENT .)


state 30

    (37) statement -> NAME DECREMENT .

    SEMICOLON       reduce using rule 37 (statement -> NAME DECREMENT .)
    RPAREN          reduce using rule 37 (statement -> NAME DECREMENT .)


state 31

    (38) statement -> NAME INCREASE . expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 51

state 32

    (39) statement -> NAME DECREASE . expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 52

state 33

    (16) statement -> INT NAME . ASSIGN expression

    ASSIGN          shift and go to state 53


state 34

    (17) statement -> FLOAT NAME . ASSIGN expression

    ASSIGN          shift and go to state 54


state 35

    (18) statement -> DOUBLE NAME . ASSIGN expression

    ASSIGN          shift and go to state 55


state 36

    (20) statement -> CHAR NAME . ASSIGN expression

    ASSIGN          shift and go to state 56


state 37

    (21) statement -> BOOL NAME . ASSIGN expression

    ASSIGN          shift and go to state 57


state 38

    (2) bloc -> bloc statement SEMICOLON .

    SIMPLE_COMMENT  reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    MULTI_COMMENT   reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    TOAMSCAN        reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    INT             reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FLOAT           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    DOUBLE          reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    STRING          reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    CHAR            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    BOOL            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    RBRACKET        reduce using rule 2 (bloc -> bloc statement SEMICOLON .)


state 39

    (26) expression -> LPAREN . expression RPAREN
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 58

state 40

    (8) statement -> PRINT LPAREN expression . RPAREN
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . TIMES expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression
    (32) expression -> expression . GREATER expression
    (33) expression -> expression . LESS expression
    (34) expression -> expression . EQUALS expression
    (35) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 59
    MINUS           shift and go to state 60
    DIVIDE          shift and go to state 61
    PLUS            shift and go to state 62
    TIMES           shift and go to state 63
    AND             shift and go to state 64
    OR              shift and go to state 65
    GREATER         shift and go to state 66
    LESS            shift and go to state 67
    EQUALS          shift and go to state 68
    NOTEQUALS       shift and go to state 69


state 41

    (9) statement -> PRINT LPAREN STRING . RPAREN
    (29) expression -> STRING .

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 70
    MINUS           reduce using rule 29 (expression -> STRING .)
    DIVIDE          reduce using rule 29 (expression -> STRING .)
    PLUS            reduce using rule 29 (expression -> STRING .)
    TIMES           reduce using rule 29 (expression -> STRING .)
    AND             reduce using rule 29 (expression -> STRING .)
    OR              reduce using rule 29 (expression -> STRING .)
    GREATER         reduce using rule 29 (expression -> STRING .)
    LESS            reduce using rule 29 (expression -> STRING .)
    EQUALS          reduce using rule 29 (expression -> STRING .)
    NOTEQUALS       reduce using rule 29 (expression -> STRING .)

  ! RPAREN          [ reduce using rule 29 (expression -> STRING .) ]


state 42

    (27) expression -> NUMBER .

    RPAREN          reduce using rule 27 (expression -> NUMBER .)
    MINUS           reduce using rule 27 (expression -> NUMBER .)
    DIVIDE          reduce using rule 27 (expression -> NUMBER .)
    PLUS            reduce using rule 27 (expression -> NUMBER .)
    TIMES           reduce using rule 27 (expression -> NUMBER .)
    AND             reduce using rule 27 (expression -> NUMBER .)
    OR              reduce using rule 27 (expression -> NUMBER .)
    GREATER         reduce using rule 27 (expression -> NUMBER .)
    LESS            reduce using rule 27 (expression -> NUMBER .)
    EQUALS          reduce using rule 27 (expression -> NUMBER .)
    NOTEQUALS       reduce using rule 27 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 27 (expression -> NUMBER .)


state 43

    (28) expression -> NAME .

    RPAREN          reduce using rule 28 (expression -> NAME .)
    MINUS           reduce using rule 28 (expression -> NAME .)
    DIVIDE          reduce using rule 28 (expression -> NAME .)
    PLUS            reduce using rule 28 (expression -> NAME .)
    TIMES           reduce using rule 28 (expression -> NAME .)
    AND             reduce using rule 28 (expression -> NAME .)
    OR              reduce using rule 28 (expression -> NAME .)
    GREATER         reduce using rule 28 (expression -> NAME .)
    LESS            reduce using rule 28 (expression -> NAME .)
    EQUALS          reduce using rule 28 (expression -> NAME .)
    NOTEQUALS       reduce using rule 28 (expression -> NAME .)
    SEMICOLON       reduce using rule 28 (expression -> NAME .)


state 44

    (19) statement -> STRING NAME ASSIGN . expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression TIMES expression
    (26) expression -> . LPAREN expression RPAREN
    (27) expression -> . NUMBER
    (28) expression -> . NAME
    (29) expression -> . STRING
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression GREATER expression
    (33) expression -> . expression LESS expression
    (34) expression -> . expression EQUALS expression
    (35) expression -> . expression NOTEQUALS expression

    LPAREN          shift and go to state 39
    NUMBER          shift and go to state 42
    NAME            shift and go to state 43
    STRING          shift and go to state 46

    expression                     shift and go to state 71

state 45

    (10) statement -> IF LPAREN expression . RPAREN LBRACKET bloc RBRACKET
    (11) statement -> IF LPAREN expression . RPAREN LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . TIMES expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression
    (32) expression -> expression . GREATER expression
    (33) expression -> expression . LESS expression
    (34) expression -> expression . EQUALS expression
    (35) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 72
    MINUS           shift and go to state 60
    DIVIDE          shift and go to state 61
    PLUS            shift and go to state 62
    TIMES           shift and go to state 63
    AND             shift and go to state 64
    OR              shift and go to state 65
    GREATER         shift and go to state 66
    LESS            shift and go to state 67
    EQUALS          shift and go to state 68
    NOTEQUALS       shift and go to state 69


state 46

    (29) expression -> STRING .

    RPAREN          reduce using rule 29 (expression -> STRING .)
    MINUS           reduce using rule 29 (expression -> STRING .)
    DIVIDE          reduce using rule 29 (expression -> STRING .)
    PLUS            reduce using rule 29 (expression -> STRING .)
    TIMES           reduce using rule 29 (expression -> STRING .)
    AND             reduce using rule 29 (expression -> STRING .)
    OR              reduce using rule 29 (expression -> STRING .)
    GREATER         reduce using rule 29 (expression -> STRING .)
    LESS            reduce using rule 29 (expression -> STRING .)
    EQUALS          reduce using rule 29 (expression -> STRING .)
    NOTEQUALS       reduce using rule 29 (expression -> STRING .)
    SEMICOLON       reduce using rule 29 (expression -> STRING .)


state 47

    (12) statement -> WHILE LPAREN expression . RPAREN LBRACKET bloc RBRACKET
    (22) expression -> expression . MINUS expression
    (23) expression -> expression . DIVIDE expression
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . TIMES expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression
    (32) expression -> expression . GREATER expression
    (33) expression -> expression . LESS expression
    (34) expression -> expression . EQUALS expression
    (35) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 73
    MINUS           shift and go to state 60
    DIVIDE          shift and go to state 61
    PLUS            shift and go to state 62
    TIMES           shift and go to state 63
    AND             shift and go to state 64
    OR              shift and go to state 65
    GREATER         shift and go to state 66
    LESS            shift and go to state 67
    EQUALS          shift and go to state 68
    NOTEQUALS       shift and go to state 69


state 48

    (13) statement -> FOR LPAREN statement . SEMICOLON expression SEMICOLON statement RPAREN LBRACKET bloc RBRACKET
